capsules/spectral-bridge/tests/ui/signal_stage_cannot_be_forged.stderr
error[E0451]: fields `receipt` and `value` of struct `CausalSignalStageV1` are private
 --> tests/ui/signal_stage_cannot_be_forged.rs:9:27
  |
9 |     CausalSignalStageV1 { receipt, value }
  |                           ^^^^^^^  ^^^^^ private field
  |                           |
  |                           private field
